# pyproject-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md  general.md
.github/workflows/: check-code.yml
